--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,7 +5,6 @@
   z-index: 10;
   background-color: $navbar-color;
   display: flex;
-  padding: 10px;
   justify-content: space-between;
   align-items: center;
   width: 100%;
